--- a/drtools-type.html
+++ b/drtools-type.html
@@ -121,6 +121,7 @@ else {
                 
                 data = new google.visualization.arrayToDataTable(arrayData);
                 dataView = new google.visualization.DataView(data);
+                dataView.setColumns([0, 1, 2, 4, 5]);
                 chart.draw(dataView, options);
           });
         });
