--- a/index.html
+++ b/index.html
@@ -173,6 +173,15 @@
 										<p>Cyclic dependencies between types</p>
 									</div>
 							</div>	
+    						<div class="department-wrap p-4 ftco-animate">
+								<div class="text p-2 text-center">
+									<div class="icon">
+										<span class="flaticon-stethoscope"></span>
+									</div>
+									<h3><a href="drtools-namespace-dependencies.html">Namespace Dependencies</a></h3>
+									<p>Namespace dependencies</p>
+								</div>
+							</div>	
 						</div>
 
     					<div class="col-md-4">
