--- a/drtools-namespace-i-a-d.html
+++ b/drtools-namespace-i-a-d.html
@@ -42,13 +42,17 @@
         <strong class="text-error"><div id="errorMessage"></div></strong>
     </div>
     <div class="text">
-      <label class="mr-sm-2" for="limitRegisters">Namespaces</label>
-      <select class="form-select" id="limitRegisters">
-        <option value="0" selected>All Namespaces</option>
-        <option value="11">Top 10</option>
-        <option value="31">Top 30</option>
-        <option value="61">Top 60</option>
-      </select>
+      <div class="text">
+        <table>
+          <tr>
+            <td><div class="mr-sm-2" id="filterInstability" style="padding-left: 50px"></div></td>
+            <td><div class="mr-sm-2" id="filterAbstractness"></div></td>
+            <td><div class="mr-sm-2" id="filterDistance"></div></td>
+          </tr>
+        </table>
+        <div id="chart_div"></div>
+        <div id="dashboard_div"></div>
+      </div>        
     </div>      
   </section>
 
@@ -70,47 +74,88 @@ if (!optionsProject.datasetNamespaceCoupling || 0 === optionsProject.datasetName
   $("#errorMessage").text(errorMessage.msgIAD)
 }
 else {
-    google.charts.load('current', {'packages':['bar']});
+  google.charts.load('current', {'packages':['corechart', 'controls']});
+  google.charts.setOnLoadCallback(drawBar);
 
     function drawBar() {
+      var dashboard = new google.visualization.Dashboard(
+        document.getElementById('dashboard_div'));
 
       $.get(optionsProject.datasetNamespaceCoupling, function(csvString) {
-        var arrayAllData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
-        var arrayData = arrayAllData;
+        var arrayData = $.csv.toArrays(csvString, {onParseValue: $.csv.hooks.castToScalar});
         var data = new google.visualization.arrayToDataTable(arrayData);
 
         var dataView = new google.visualization.DataView(data);
-        dataView.setColumns([0, 3, 4, 5]);
 
-        var options = {
-            width: 1300,
-            height: 700,
-            legend: { position: 'top', maxLines: 3 },
-            bar: { groupWidth: '75%' },
-            fontName: 'Poppins',
-            bars: 'horizontal' 
-        };
-        var chart = new google.charts.Bar(document.getElementById('chart_div'));
-        chart.draw(dataView, options);
-
-        $(function(){
-          $("#limitRegisters").change(function(){
-              var status = this.value;
-              if (status > 0 && arrayAllData.length >= status)
-                arrayData = arrayAllData.slice(0, status);
-              else arrayData = arrayAllData;
-                
-                data = new google.visualization.arrayToDataTable(arrayData);
-                dataView = new google.visualization.DataView(data);
-                dataView.setColumns([0, 3, 4, 5]);
-                chart.draw(dataView, options);
+        var sliderAbstractness = new google.visualization.ControlWrapper({
+            'controlType': 'NumberRangeFilter',
+            'containerId': 'filterAbstractness',
+            'options': {
+              'filterColumnIndex': 4,
+              'minValue': 0,
+              'maxValue': 1,
+              'ui': {
+                'labelStacking': 'horizontal',
+                'step': 0.1,
+                'format': {'fractionDigits': 1},
+                'label': 'Abstractness'
+              }
+            }
           });
-      });        
+
+        var sliderInstability = new google.visualization.ControlWrapper({
+            'controlType': 'NumberRangeFilter',
+            'containerId': 'filterInstability',
+            'options': {
+              'filterColumnIndex': 3,
+              'minValue': 0,
+              'maxValue': 1,
+              'ui': {
+                'labelStacking': 'horizontal',
+                'step': 0.1,
+                'format': {'fractionDigits': 1},
+                'label': 'Instability'
+              }
+            }
+          });
+
+          var sliderDistance = new google.visualization.ControlWrapper({
+            'controlType': 'NumberRangeFilter',
+            'containerId': 'filterDistance',
+            'options': {
+              'filterColumnIndex': 5,
+              'minValue': 0,
+              'maxValue': 1,
+              'ui': {
+                'labelStacking': 'horizontal',
+                'step': 0.1,
+                'format': {'fractionDigits': 1},
+                'label': 'Distance'
+              }
+            }
+          });
+
+        var barChart = new google.visualization.ChartWrapper({
+          'chartType': 'BarChart',
+          'containerId': 'chart_div',
+          'options': {
+            'width': 1300,
+            'height': 550,
+            'chartArea':{'width':'80%','height':'90%'},
+            'legend': { 'position': 'top', 'maxLines': 3 },
+            'bar': { 'groupWidth': '75%' },
+            'fontName': 'Poppins',
+            'bars': 'horizontal' 
+          },          
+          'view': {'columns': [0, 3, 4, 5]}
+        });
+
+        dashboard.bind([sliderAbstractness, sliderInstability, sliderDistance], [barChart]);
+        dashboard.draw(data);
     });
   };
-  google.charts.setOnLoadCallback(drawBar);
 }
 </script>
-<div id="chart_div" style="width: 1500px; height: 700px; font-family: 'Poppins', sans-serif"></div>
+<div id="chart_div" style="width: 1300px; height: 700px; font-family: 'Poppins', sans-serif"></div>
 </body>
 </html>
