--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
     								<div class="icon">
     									<span class="flaticon-stethoscope"></span>
     								</div>
-    								<h3><a href="drtools-namespace-i-a-d.html">Instability/Abstractness/Distance</a></h3>
+    								<h3><a href="drtools-namespace-i-a-d.html">Instability, Abstractness, and Distance</a></h3>
     								<p>Using I, A, and D</p>
     							</div>
     						</div>
