--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<script src="./drtools-properties.js"></script>
 	<script src="./js/drtools/d3.v4.js"></script>
+	<script src="./js/drtools/drtools-utils.js"></script>
   </head>
   <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
 
@@ -42,7 +43,7 @@
 				</div>
 			</div>
 		</section>
-			
+
 		<section class="ftco-facts img ftco-counter" style="background-image: url(images/bg_2.jpg);">
 			<div class="overlay"></div>
 			<div class="container">
