--- a/drtools-type.html
+++ b/drtools-type.html
@@ -79,9 +79,11 @@
   <script src="js/jquery.animateNumber.min.js"></script>
   <script src="js/scrollax.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/drtools/drtools-utils.js"></script>
       
 <script>
-if (!optionsProject.datasetTypes || 0 === optionsProject.datasetTypes.length === '') {
+if (!optionsProject.datasetTypes || 0 === optionsProject.datasetTypes.length === ''
+        || !doesFileExist(optionsProject.datasetTypes)) {
   $("#errorMessage").text(errorMessage.msgTypes)
 }
 else {
@@ -170,7 +172,7 @@ else {
   }
 }
 </script>
-<div id="series_chart_div" style="width: 1500px; height: 600px;"></div>
+<div id="series_chart_div" style="width: 1300px; height: 600px;"></div>
 
 </body>
 </html>
