--- a/drtools-type-coupling2.html
+++ b/drtools-type-coupling2.html
@@ -34,6 +34,13 @@
       .bubbles:hover {
         stroke: black;
       }
+      .text_table {
+        font-family: 'Poppins', Arial, sans-serif;
+        font-size: 13px;
+        line-height: 1.8;
+        font-weight: 400;
+        color: #000;
+      }
     </style>
 </head>
 <body class="text-center">
@@ -51,6 +58,9 @@
       <div class="text">
           <strong class="text-error"><div id="errorMessage"></div></strong>
       </div>
+    </section>  
+
+    <section class="ftco-section" id="graph-section">      
       <div class="text">
         <table>
           <tr>
@@ -67,6 +77,13 @@
       </div>            
     </section>
 
+    <section class="ftco-section" id="metrics-section">
+      <div class="col-md-12 text-center heading-section ftco-animate">
+          <b>Statistics of Metrics</b>
+      </div>
+      <div id="table_metrics"></div>
+    </section>
+
   <script src="js/jquery-migrate-3.0.1.min.js"></script>
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -81,6 +98,51 @@
   <script src="js/main.js"></script>
   <script src="js/drtools/drtools-utils.js"></script>
       
+<script>
+    $.ajax({
+            url: optionsProject.datasetStatisticOfType,
+            dataType: 'text',
+        }).done(readStatisticTable);
+  
+    function readStatisticTable(data) {
+        var allRows = data.split(/\r?\n|\r/);
+        var table = '<table class="table table-hover text_table">';
+        table += '<thead>';
+        table += '<tr>';
+        table += '<th scope="col">Metric</th>';
+        table += '<th scope="col">1st Quartile</th>';
+        table += '<th scope="col">3rd Quartile</th>';
+        table += '<th scope="col">Average</th>';
+        table += '<th scope="col">Median</th>';
+        table += '<th scope="col">Min Value</th>';
+        table += '<th scope="col">Max Value</th>';
+        table += '<th scope="col">Amplitude</th>';
+        table += '<th scope="col">Standard Deviation</th>';
+        table += '<th scope="col">Upper Fence</th>';
+        table += '<th scope="col">Threshold (greater than = bad)</th>';
+        table += '</tr>';
+        table += '</thead>';
+        table += '<tbody>';
+                
+        for (var singleRow = 1; singleRow < allRows.length; singleRow++) {
+            table += '<tr>';
+            var rowCells = allRows[singleRow].split(',');
+            for (var rowCell = 0; rowCell < rowCells.length; rowCell++) {
+              if (rowCells[0] ==='"FAN-IN"' || rowCells[0] === '"FAN-OUT"' || rowCells[0] === '"DEP"' || rowCells[0] === '"I-DEP"') {
+                table += '<td scope="col">';
+                if (rowCell === 0)  table += rowCells[rowCell].replace(/^"|"$/g, '');
+                else    table += rowCells[rowCell];
+                table += '</td>';
+              }
+            }
+            table += '</tr>';
+        } 
+        table += '</tbody>';
+        table += '</table>';
+        $('#table_metrics').append(table);
+    }      
+</script>
+  
 <script>
 if (!optionsProject.datasetTypes || 0 === optionsProject.datasetTypes.length === ''
         || !doesFileExist(optionsProject.datasetTypes)) {
@@ -172,8 +234,6 @@ else {
   }
 }
 </script>
-<div id="series_chart_div" style="width: 1300px; height: 600px;"></div>
-
 </body>
 </html>
 
